POFIM-38: Lagrer søknadsperioder fra forespørsler